--- a/sf-admin/static/sa.css
+++ b/sf-admin/static/sa.css
@@ -117,3 +117,32 @@ input::-webkit-inner-spin-button {
 .c-item .el-input.is-disabled .el-input__inner{color: #999;}
 /* 链接 行高设置 */
 .c-item .el-link{line-height: 1.6em;}
+
+
+/* ===================== sa-fast新增 ===================== */
+
+/* ==== 图集照片样式 ==== */
+.c-item .image-box{max-width: 700px; padding-left: 4px;}
+.c-item .image-box-2{width: 90px; height: 125px; cursor: pointer; float: left;}
+.c-item .image-box-2 img{width: 90px; height: 90px; border-radius: 2px;}
+.c-item .image-box-2{display: inline-block; margin-right: 5px; margin-bottom: 5px;}
+.c-item .image-box-2 p{text-align: center; color: #999; margin-top: -10px;}
+.c-item .up_img{text-align: center; background-color: #f8f8f8; height: 90px;}
+.c-item .up_img img{width: 40px; height: 40px; margin-top: 25px;}
+
+/* ==== wang富文本编辑器 ==== */
+.editor-item{width: 100%; height: auto;}
+.editor-item .c-label{float: left;}
+.editor-item .editor-box{float: left; width: 80%; margin-top: 0px; margin-left: 5px; transition: all 0.2s;} 
+.editor-item #editor{min-height: 300px; background-color: #FFF;}
+.editor-item .w-e-toolbar{padding-top: 5px !important;}
+/* 尽量小点 */
+.editor-item .editor-box{float: left; width: 700px;} 
+.editor-item .editor-box img{max-width: 200px !important;}
+/* .editor-box img{margin-left: -1em;}
+.editor-box img{margin-top: -5px;} */
+/* 仿移动端样式兼容 */
+/* .editor-item .editor-box{float: left; width: 400px;} 
+.editor-item .w-e-toolbar{width: 400px; flex-wrap: wrap; } */
+.c-item .fold{height: 100px !important; overflow: hidden;}
+.c-item .el-select-dropdown{z-index: 9999999 !important;}
